<resources>
    <string name="app_name">SudokuHW</string>
    <string name="mainTitle">Игра Судоку</string>
    <string name="new_game">Новая игра</string>
    <string name="about">Описание</string>
    <string name="exitGame">Выход</string>
    <string name="continueGame">Продолжить</string>
    <string name="some_information_about_game">Цель состоит в том, чтобы заполнить сетку 9x9 цифрами, чтобы
         каждый столбец, каждая строка и каждая из девяти подсеток 3x3, составляющих сетку (также называемая
         «боксы», «блоки», «регионы» или «подквартиры») содержат все цифры от 1 до 9.
         сеттер головоломок предоставляет частично заполненную сетку, которая для хорошо поставленной головоломки имеет уникальную
         решение.

         Завершенные игры всегда представляют собой тип латинского квадрата с дополнительным ограничением на содержание
         отдельных регионов. Например, одно и то же целое число не может появляться дважды в одной строке,
         или любой из девяти 3x3 субрегионов игрового поля 9x9.

         Разработчик: Минаев Александр</string>
    <string name="about_game">Об ИГРЕ</string>
</resources>
