<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/title"
            android:text="@string/mainTitle"
            android:layout_marginBottom="5dip"
            android:textSize="40sp"/>

        <Button
            android:id="@+id/btnContinue"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/continueGame"
            android:textSize="50dp"
            android:onClick="continueGame"/>
        <Button
            android:id="@+id/btnNewGame"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_game"
            android:textSize="50dp"
            android:onClick="newGame"/>
        <Button
            android:id="@+id/btnAbout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:textSize="50dp"
            android:onClick="aboutGame"/>
        <Button
            android:id="@+id/btnExit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/exitGame"
            android:textSize="50dp"
            android:onClick="exitGame"/>
    </LinearLayout>


</LinearLayout>